2010-04-01  Ilya Tikhonovsky  <loislo@chromium.org>

Reviewed by Pavel Feldman.

        Web Inspector: Sometimes js code can detach page from it's frame and in that case
        Dispatch Events will stay in the TimelineAgent's events stack. Only immediate events will
        appear at frontend.
        https://bugs.webkit.org/show_bug.cgi?id=36890

        * bindings/v8/V8Proxy.cpp:
        (WebCore::V8Proxy::callFunction):
        * dom/Node.cpp:
        (WebCore::Node::dispatchGenericEvent):
        * page/DOMWindow.cpp:
        (WebCore::DOMWindow::dispatchEvent):

Canonical link: https://commits.webkit.org/48224@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56931 268f45cc-cd09-0410-ab3c-d52691b4dbfc