WebCore/dom/Node.cpp
@@ -2610,10 +2610,12 @@ bool Node::dispatchGenericEvent(PassRefPtr<Event> prpEvent)
     }
 
 #if ENABLE(INSPECTOR)
-    InspectorTimelineAgent* timelineAgent = document()->inspectorTimelineAgent();
-    bool timelineAgentIsActive = timelineAgent && eventHasListeners(event->type(), targetForWindowEvents, this, ancestors);
-    if (timelineAgentIsActive)
-        timelineAgent->willDispatchEvent(*event);
+    Page* inspectedPage = InspectorTimelineAgent::instanceCount() ? document()->page() : 0;
+    if (inspectedPage)
+        if (InspectorTimelineAgent* timelineAgent = eventHasListeners(event->type(), targetForWindowEvents, this, ancestors) ? inspectedPage->inspectorTimelineAgent() : 0)
+            timelineAgent->willDispatchEvent(*event);
+        else
+            inspectedPage = 0;
 #endif
 
     // Give the target node a chance to do some work before DOM event handlers get a crack.
@@ -2697,8 +2699,9 @@ doneDispatching:
 
 doneWithDefault:
 #if ENABLE(INSPECTOR)
-    if (timelineAgentIsActive && (timelineAgent = document()->inspectorTimelineAgent()))
-        timelineAgent->didDispatchEvent();
+    if (inspectedPage)
+        if (InspectorTimelineAgent* timelineAgent = inspectedPage->inspectorTimelineAgent())
+            timelineAgent->didDispatchEvent();
 #endif
 
     Document::updateStyleForAllDocuments();
